--- a/NimbleLoop.WebApp/NimbleLoop.WebApp/NimbleLoop.WebApp.csproj
+++ b/NimbleLoop.WebApp/NimbleLoop.WebApp/NimbleLoop.WebApp.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\NimbleLoop.WebApp.Application\NimbleLoop.WebApp.Application.csproj" />
+    <ProjectReference Include="..\..\NimbleLoop.WebApp.Db\NimbleLoop.WebApp.Db.csproj" />
     <ProjectReference Include="..\NimbleLoop.WebApp.Client\NimbleLoop.WebApp.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.8" />
@@ -15,5 +17,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.8" />
   </ItemGroup>
+
+	<ItemGroup>
+		<InternalsVisibleTo Include="NimbleLoop.WebApp.Ui.Tests"/>
+	</ItemGroup>
 
 </Project>
