Implement new StackedLayout with responsive design
- Updated `StackedLayout.razor` to include a navigation bar, mobile menu, and main content area using Tailwind CSS.
- Created `StackedLayout.razor.tw.css` for component-specific styles.
- Modified `buildGlobalCss` in `gulpfile.js` for proper CSS isolation processing.
- Adjusted default export in `gulpfile.js` for consistency.
- Added new logo images for the updated layout.
- Updated `style-input.css` with new theme colors and error UI styles.
- Refactored `App.razor` to link to the new NimbleLoop UI CSS.
- Replaced the old layout in `MainLayout.razor` with the new `StackedLayout`.
- Removed `MainLayout.razor.css` to streamline styles.
- Updated project references in `NimbleLoop.WebApp.csproj` to include the new UI project.

--- a/NimbleLoop.WebApp/NimbleLoop.WebApp/NimbleLoop.WebApp.csproj
+++ b/NimbleLoop.WebApp/NimbleLoop.WebApp/NimbleLoop.WebApp.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\NimbleLoop.WebApp.Application\NimbleLoop.WebApp.Application.csproj" />
     <ProjectReference Include="..\..\NimbleLoop.WebApp.Db\NimbleLoop.WebApp.Db.csproj" />
+    <ProjectReference Include="..\..\NimbleLoop.WebApp.Ui\NimbleLoop.WebApp.Ui.csproj" />
     <ProjectReference Include="..\NimbleLoop.WebApp.Client\NimbleLoop.WebApp.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.8" />
@@ -19,7 +20,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<InternalsVisibleTo Include="NimbleLoop.WebApp.Ui.Tests"/>
+		<InternalsVisibleTo Include="NimbleLoop.WebApp.Ui.Tests" />
 	</ItemGroup>
 
 </Project>
