--- a/NimbleLoop.WebApp.Ui/NimbleLoop.WebApp.Ui.csproj
+++ b/NimbleLoop.WebApp.Ui/NimbleLoop.WebApp.Ui.csproj
@@ -76,5 +76,8 @@
   <ItemGroup>
     <ScopedCssInput Remove="Components/**/*.razor.tw.css" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Components\Layout\" />
+  </ItemGroup>
 
 </Project>
