Add FeaturedSection component to home page
Updated FeaturedSection.razor to highlight various features with a structured layout, including icons and descriptions. Added a new folder for home components in the project structure. Integrated the FeaturedSection component into Home.razor.

--- a/NimbleLoop.WebApp.Ui/NimbleLoop.WebApp.Ui.csproj
+++ b/NimbleLoop.WebApp.Ui/NimbleLoop.WebApp.Ui.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Components\Layout\" />
+    <Folder Include="Components\Home\" />
   </ItemGroup>
 
 </Project>
